      configuration variables, which is expressed in bytes per second.
      Also, Conary displays the transfer rate when uploading and
      downloading.  Thanks to Pavel Volkovitskiy for these features.
    * The client didn't write config files for merged changesets in the
      right order, which could result in changesets which could not be
      commited.

Changes in 0.91:
  o Bugfixes
    * A bug was fixed the code that freezes path hashes.  Previously,
      path hashes were not sorted in the frozen representation.  Code
      to fix the frozen path hashes in databases and repositories has
      beed added.
  o Build
    * added cleanAfterCook config that controls whether conary tries to
      clean up after a successful build

Changes in 0.90.0:
  o Code Structure/Architecture Changes:
    * Conary now has the concept of "weak references", where a weak reference
      allows conary to be able to recognize the relationship between a
      collection and the children of collections it contains.  This allows
      us to add several new features to conary, documented in Client and Build
      changes.
    * SQL operations have been migrated to the dbstore driver to allow
      for an easier switch of the database backends for the server side.
    * Various query and code structure optimizations have been
      implemented to allow running under MySQL and PostgreSQL.

  o Documentation Changes:
    * Added summaries about updateall in the conary man page and added
      information about the command-line options for conary rq.
    * Clarified behavior of "conary shadow --source-only" with respect to
      rPath bug #500.
    * Added synonyms for cvc and conary commands which have shortcuts
      (ex: checkout and co).
    * Added man page entry about cvc clone.

  o Package Building Changes:
    * Build logs now contain unexpanded macros, since not all macros
      may be defined when the build log is initially created.